# golar

./: .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  Cargo.toml  README.md  flake.nix  go.mod  go.sum  go.work  go.work.sum  golar.config.ts  golar.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsdown.config.ts  vitest.config.ts  wrangler.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
cmd/golar/: enablevtprocessing_windows.go  exports.c  exports.go  exports.h  js_plugin.go  main.go  napi_dynamic_aliases.h  napi_dynamic_symbols.inc
crates/golar/: Cargo.toml
crates/golar/src/: ast_generated.rs  bindings.rs  common.rs  flags_generated.rs  host_symbols.rs  host_symbols_linked.rs  host_symbols_windows.rs  lib.rs  types_generated.rs
docs/: astro.config.ts  package.json  pnpm-lock.yaml
docs/src/: content.config.ts
e2e/: utils.ts
e2e/all-languages/: all-languages.test.ts
e2e/ember-emit/: ember-emit.test.ts
e2e/lint-typecheck/: lint-typecheck.test.ts
e2e/service-code-error/: service-code-error.test.ts
e2e/typecheck-gitignore/: typecheck-gitignore.test.ts
e2e/typecheck-implicit-files/: typecheck-implicit-files.test.ts
golar/: golar.go
patches/: 0001-Golar-extension.patch  vitest.patch
plugin/: plugin.go
tools/: build.ts  download-napi-headers.ts  download-node-lib.ts  gen-npm-packages.ts  gen-rule-config.ts  patch-astro.ts  patch-go.ts  patch-tsgo.ts  save-astro-patches.ts  save-go-patches.ts  save-tsgo-patches.ts  utils.ts
util/: debug.go  debug_test.go
(+224 files in other folders)
