[package]
name = "golar"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
include = ["/src"]

[dependencies]
inventory = "0.3.22"
libloading = "0.9.0"
napi = { version = "3.8.3", features = ["napi6"] }
napi-derive = "3.5.2"
